Shorten the note

--- a/tex/p053.tex
+++ b/tex/p053.tex
@@ -35,7 +35,7 @@
 \vs p053 5:1 Upon the outbreak of the Satania rebellion, Michael took counsel of his Paradise brother, Immanuel. Following this momentous conference, Michael announced that he would pursue the same policy which had characterized his dealings with similar upheavals in the past, an attitude of noninterference.
 \vs p053 5:2 \pc At the time of this rebellion and the two which preceded it there was no absolute and personal sovereign authority in the universe of Nebadon. Michael ruled by divine right, as vicegerent of the Universal Father, but not yet in his own personal right. He had not completed his bestowal career; he had not yet been vested with “all power in heaven and on earth.”
 \vs p053 5:3 From the outbreak of rebellion to the day of his enthronement as sovereign ruler of Nebadon, Michael never interfered with the rebel forces of Lucifer; they were allowed to run a free course for almost 200,000 years of Urantia time. Christ Michael now has ample power and authority to deal promptly, even summarily, with such outbreaks of disloyalty, but we doubt that this sovereign authority would lead him to act differently if another such upheaval should occur.
-\vs p053 5:4 \pc Since Michael elected to remain aloof from the actual warfare of the Lucifer rebellion, Gabriel called his personal staff together on Edentia and, in counsel with the Most Highs, elected to assume command of the loyal hosts of Satania. Michael remained on Salvington while Gabriel proceeded to Jerusem, and establishing himself on the sphere dedicated to the Father --- the same Universal Father whose personality Lucifer and Satan had questioned --- in the presence of the forgathered hosts of loyal personalities, he displayed the banner of Michael, the material emblem of the Trinity government of all creation, the three azure blue concentric circles\fnst{\textbf{the three azure blue concentric circles}, Let us think about the possible reason for this emblem. Many visionaries and mystics (including the present editor) have visualised the evolving immortal (``morontia'', in terminology of the Urantia Papers) soul as a blue sphere of light, see for example the excellent presentation by Troy R.~Bishop here: \texttt{http://www.starspring.com/gloriousascent/swi-files/glorious\_ascent.html}. Furthermore, if we rotate the three blue concentric circles around the common axis of symmetry, they will appear as one blue sphere. Therefore, we see that the emblem of the three concentric circles not only represents the Trinity government, but also the morontia soul, i.e. the true essence of what we are becoming.} on a white background.
+\vs p053 5:4 \pc Since Michael elected to remain aloof from the actual warfare of the Lucifer rebellion, Gabriel called his personal staff together on Edentia and, in counsel with the Most Highs, elected to assume command of the loyal hosts of Satania. Michael remained on Salvington while Gabriel proceeded to Jerusem, and establishing himself on the sphere dedicated to the Father --- the same Universal Father whose personality Lucifer and Satan had questioned --- in the presence of the forgathered hosts of loyal personalities, he displayed the banner of Michael, the material emblem of the Trinity government of all creation, the three azure blue concentric circles\fnst{\textbf{the three azure blue concentric circles}, Many prophets (including myself) have visualised the evolving morontia soul as a blue sphere of light, see for example the presentation ``Glorious Ascent'' by Troy R.~Bishop.} on a white background.
 \vs p053 5:5 The Lucifer emblem was a banner of white with one red circle, in the centre of which a black solid circle appeared.
 \vs p053 5:6 “There was war in heaven; Michael’s commander and his angels fought against the dragon (Lucifer, Satan, and the apostate princes); and the dragon and his rebellious angels fought but prevailed not.” This “war in heaven” was not a physical battle as such a conflict might be conceived on Urantia. In the early days of the struggle Lucifer held forth continuously in the planetary amphitheatre. Gabriel conducted an unceasing exposure of the rebel sophistries from his headquarters taken up near at hand. The various personalities present on the sphere who were in doubt as to their attitude would journey back and forth between these discussions until they arrived at a final decision.
 \vs p053 5:7 But this war in heaven was very terrible and very real. While displaying none of the barbarities so characteristic of physical warfare on the immature worlds, this conflict was far more deadly; material life is in jeopardy in material combat, but the war in heaven was fought in terms of life eternal.
