Remove unnecessary footnote

--- a/tex/p059.tex
+++ b/tex/p059.tex
@@ -10,7 +10,7 @@
 \vs p059 0:8 As this era begins, the sea bottoms, the extensive continental shelves, and the numerous shallow near\hyp{}shore basins are covered with prolific vegetation. The more simple and primitive forms of animal life have already developed from preceding vegetable organisms, and the early animal organisms have gradually made their way along the extensive coast lines of the various land masses until the many inland seas are teeming with primitive marine life. Since so few of these early organisms had shells, not many have been preserved as fossils. Nevertheless the stage is set for the opening chapters of that great “stone book” of the life\hyp{}record preservation which was so methodically laid down during the succeeding ages.
 \vs p059 0:9 The continent of North America is wonderfully rich in the fossil\hyp{}bearing deposits of the entire marine\hyp{}life era. The very first and oldest layers are separated from the later strata of the preceding period by extensive erosion deposits which clearly segregate these two stages of planetary development.
 \usection{1.\bibnobreakspace Early Marine Life in the Shallow Seas\\The Trilobite Age}
-\vs p059 1:1 By the dawn of this period of relative quiet on the earth’s surface, life is confined to the various inland seas and the oceanic shore line; as yet no form of land organism has evolved. Primitive marine animals are well established and are prepared for the next evolutionary development. Amoebae are typical survivors of this initial stage of animal life, having made their appearance toward the close of the preceding transition period.\fnc{\bibtextul{Ameba} are typical survivors of this initial stage of animal life,\ldots{} \bibexpl{The plural is required here to agree with the predicate “\ldots{}are typical survivors\ldots{}”.}}
+\vs p059 1:1 By the dawn of this period of relative quiet on the earth’s surface, life is confined to the various inland seas and the oceanic shore line; as yet no form of land organism has evolved. Primitive marine animals are well established and are prepared for the next evolutionary development. Amoebae are typical survivors of this initial stage of animal life, having made their appearance toward the close of the preceding transition period.
 \vs p059 1:2 \pc \bibemph{400,000,000} years ago marine life, both vegetable and animal, is fairly well distributed over the whole world. The world climate grows slightly warmer and becomes more equable. There is a general inundation of the seashores of the various continents, particularly of North and South America. New oceans appear, and the older bodies of water are greatly enlarged.
 \vs p059 1:3 Vegetation now for the first time crawls out upon the land and soon makes considerable progress in adaptation to a nonmarine habitat.
 \vs p059 1:4 \bibemph{Suddenly} and without gradation ancestry the first multicellular animals make their appearance. The trilobites have evolved, and for ages they dominate the seas. From the standpoint of marine life this is the trilobite age.
