Tidy up the numerals

--- a/tex/p061.tex
+++ b/tex/p061.tex
@@ -68,13 +68,13 @@
 \usection{6.\bibnobreakspace Primitive Man in the Ice Age}
 \vs p061 6:1 The great event of this glacial period was the evolution of primitive man. Slightly to the west of India, on land now under water and among the offspring of Asiatic migrants of the older North American lemur types, the dawn mammals \bibemph{suddenly} appeared. These small animals walked mostly on their hind legs, and they possessed large brains in proportion to their size and in comparison with the brains of other animals. In the 70\ts{th} generation of this order of life a new and higher group of animals \bibemph{suddenly} differentiated. These new mid\hyp{}mammals --- almost twice the size and height of their ancestors and possessing proportionately increased brain power --- had only well established themselves when the Primates, the third vital mutation, \bibemph{suddenly} appeared. (At this same time, a retrograde development within the mid\hyp{}mammal stock gave origin to the simian ancestry; and from that day to this the human branch has gone forward by progressive evolution, while the simian tribes have remained stationary or have actually retrogressed.)
 \vs p061 6:2 \pc \bibemph{1,000,000} years ago Urantia was registered as an \bibemph{inhabited world.} A mutation within the stock of the progressing Primates \bibemph{suddenly} produced two primitive human beings, the actual ancestors of mankind.
-\vs p061 6:3 This event occurred at about the time of the beginning of the third glacial advance; thus it may be seen that your early ancestors were born and bred in a stimulating, invigorating, and difficult environment. And the sole survivors of these Urantia aborigines, the Eskimos, even now prefer to dwell in frigid northern climes.
+\vs p061 6:3 This event occurred at about the time of the beginning of the 3\ts{rd} glacial advance; thus it may be seen that your early ancestors were born and bred in a stimulating, invigorating, and difficult environment. And the sole survivors of these Urantia aborigines, the Eskimos, even now prefer to dwell in frigid northern climes.
 \vs p061 6:4 \pc Human beings were not present in the Western Hemisphere until near the close of the ice age. But during the interglacial epochs they passed westward around the Mediterranean and soon overran the continent of Europe. In the caves of western Europe may be found human bones mingled with the remains of both tropic and arctic animals, testifying that man lived in these regions throughout the later epochs of the advancing and retreating glaciers.
 \usection{7.\bibnobreakspace The Continuing Ice Age}
 \vs p061 7:1 Throughout the glacial period other activities were in progress, but the action of the ice overshadows all other phenomena in the northern latitudes. No other terrestrial activity leaves such characteristic evidence on the topography. The distinctive boulders and surface cleavages, such as potholes, lakes, displaced stone, and rock flour, are to be found in connection with no other phenomenon in nature. The ice is also responsible for those gentle swells, or surface undulations, known as drumlins. And a glacier, as it advances, displaces rivers and changes the whole face of the earth. Glaciers alone leave behind them those telltale drifts --- the ground, lateral, and terminal moraines. These drifts, particularly the ground moraines, extend from the eastern seaboard north and westward in North America and are found in Europe and Siberia.
 \vs p061 7:2 \pc \bibemph{750,000} years ago the 4\ts{th} ice sheet, a union of the North American central and eastern ice fields, was well on its way south; at its height it reached to southern Illinois, displacing the Mississippi River 80\,km to the west, and in the east it extended as far south as the Ohio River and central Pennsylvania.
 \vs p061 7:3 In Asia the Siberian ice sheet made its southernmost invasion, while in Europe the advancing ice stopped just short of the mountain barrier of the Alps.
-\vs p061 7:4 \pc \bibemph{500,000} years ago, during the fifth advance of the ice, a new development accelerated the course of human evolution. \bibemph{Suddenly} and in one generation the six coloured races mutated from the aboriginal human stock. This is a doubly important date since it also marks the arrival of the Planetary Prince.
+\vs p061 7:4 \pc \bibemph{500,000} years ago, during the 5\ts{th} advance of the ice, a new development accelerated the course of human evolution. \bibemph{Suddenly} and in one generation the six coloured races mutated from the aboriginal human stock. This is a doubly important date since it also marks the arrival of the Planetary Prince.
 \vs p061 7:5 In North America the advancing 5\ts{th} glacier consisted of a combined invasion by all three ice centres. The eastern lobe, however, extended only a short distance below the St. Lawrence valley, and the western ice sheet made little southern advance. But the central lobe reached south to cover most of the State of Iowa. In Europe this invasion of the ice was not so extensive as the preceding one.
 \vs p061 7:6 \pc \bibemph{250,000} years ago the 6\ts{th} and last glaciation began. And despite the fact that the northern highlands had begun to sink slightly, this was the period of greatest snow deposition on the northern ice fields.
 \vs p061 7:7 In this invasion the three great ice sheets coalesced into one vast ice mass, and all of the western mountains participated in this glacial activity. This was the largest of all ice invasions in North America; the ice moved south over 2,400\,km from its pressure centres, and North America experienced its lowest temperatures.
