--- a/tex/p062.tex
+++ b/tex/p062.tex
@@ -21,7 +21,7 @@
 \vs p062 3:6 \pc Compared with the ancestral species, the mid\hyp{}mammals were an improvement in every way. Even their potential life span was longer, being about 25 years. A number of rudimentary human traits appeared in this new species. In addition to the innate propensities exhibited by their ancestors, these mid\hyp{}mammals were capable of showing disgust in certain repulsive situations. They further possessed a well\hyp{}defined hoarding instinct; they would hide food for subsequent use and were greatly given to the collection of smooth round pebbles and certain types of round stones suitable for defensive and offensive ammunition.
 \vs p062 3:7 These mid\hyp{}mammals were the first to exhibit a definite construction propensity, as shown in their rivalry in the building of both treetop homes and their many\hyp{}tunnelled subterranean retreats; they were the first species of mammals ever to provide for safety in both arboreal and underground shelters. They largely forsook the trees as places of abode, living on the ground during the day and sleeping in the treetops at night.
 \vs p062 3:8 As time passed, the natural increase in numbers eventually resulted in serious food competition and sex rivalry, all of which culminated in a series of internecine battles that nearly destroyed the entire species. These struggles continued until only one group of less than 100 individuals was left alive. But peace once more prevailed, and this lone surviving tribe built anew its treetop bedrooms and once again resumed a normal and semipeaceful existence.
-\vs p062 3:9 \pc You can hardly realize by what narrow margins your prehuman ancestors missed extinction from time to time. Had the ancestral frog of all humanity jumped 5\,cm less on a certain occasion, the whole course of evolution would have been markedly changed. The immediate lemurlike mother of the dawn\hyp{}mammal species escaped death no less than 5 times by mere hairbreadth margins before she gave birth to the father of the new and higher mammalian order. But the closest call of all was when lightning struck the tree in which the prospective mother of the Primates twins was sleeping. Both of these mid\hyp{}mammal parents were severely shocked and badly burned; three of their 7 children were killed by this bolt from the skies. These evolving animals were almost superstitious. This couple whose treetop home had been struck were really the leaders of the more progressive group of the mid\hyp{}mammal species; and following their example, more than half the tribe, embracing the more intelligent families, moved about 3\,km away from this locality and began the construction of new treetop abodes and new ground shelters --- their transient retreats in time of sudden danger.
+\vs p062 3:9 \pc You can hardly realize by what narrow margins your prehuman ancestors missed extinction from time to time. Had the ancestral frog of all humanity jumped 5\,cm less on a certain occasion, the whole course of evolution would have been markedly changed. The immediate lemurlike mother of the dawn\hyp{}mammal species escaped death no less than 5 times by mere hairbreadth margins before she gave birth to the father of the new and higher mammalian order. But the closest call of all was when lightning struck the tree in which the prospective mother of the Primates twins was sleeping. Both of these mid\hyp{}mammal parents were severely shocked and badly burned; 3 of their 7 children were killed by this bolt from the skies. These evolving animals were almost superstitious. This couple whose treetop home had been struck were really the leaders of the more progressive group of the mid\hyp{}mammal species; and following their example, more than half the tribe, embracing the more intelligent families, moved about 3\,km away from this locality and began the construction of new treetop abodes and new ground shelters --- their transient retreats in time of sudden danger.
 \vs p062 3:10 Soon after the completion of their home, this couple, veterans of so many struggles, found themselves the proud parents of twins, the most interesting and important animals ever to have been born into the world up to that time, for they were the first of the new species of \bibemph{Primates} constituting the next vital step in prehuman evolution.
 \vs p062 3:11 \pc Contemporaneously with the birth of these Primates twins, another couple --- a peculiarly retarded male and female of the mid\hyp{}mammal tribe, a couple that were both mentally and physically inferior --- also gave birth to twins. These twins, one male and one female, were indifferent to conquest; they were concerned only with obtaining food and, since they would not eat flesh, soon lost all interest in seeking prey. These retarded twins became the founders of the modern simian tribes. Their descendants sought the warmer southern regions with their mild climates and an abundance of tropical fruits, where they have continued much as of that day except for those branches which mated with the earlier types of gibbons and apes and have greatly deteriorated in consequence.
 \vs p062 3:12 And so it may be readily seen that man and the ape are related only in that they sprang from the mid\hyp{}mammals, a tribe in which there occurred the contemporaneous birth and subsequent segregation of two pairs of twins: the inferior pair destined to produce the modern types of monkey, baboon, chimpanzee, and gorilla; the superior pair destined to continue the line of ascent which evolved into man himself.
@@ -40,7 +40,7 @@
 \vs p062 5:3 These first human beings (and their descendants) reached full maturity at 12 years of age and possessed a potential life span of about 75 years.
 \vs p062 5:4 Many new emotions early appeared in these human twins. They experienced admiration for both objects and other beings and exhibited considerable vanity. But the most remarkable advance in emotional development was the sudden appearance of a new group of really human feelings, the worshipful group, embracing awe, reverence, humility, and even a primitive form of gratitude. Fear, joined with ignorance of natural phenomena, is about to give birth to primitive religion.
 \vs p062 5:5 Not only were such human feelings manifested in these primitive humans, but many more highly evolved sentiments were also present in rudimentary form. They were mildly cognizant of pity, shame, and reproach and were acutely conscious of love, hate, and revenge, being also susceptible to marked feelings of jealousy.
-\vs p062 5:6 These first two humans --- the twins --- were a great trial to their Primates parents. They were so curious and adventurous that they nearly lost their lives on numerous occasions before they were eight years old. As it was, they were rather well scarred up by the time they were 12.
+\vs p062 5:6 These first two humans --- the twins --- were a great trial to their Primates parents. They were so curious and adventurous that they nearly lost their lives on numerous occasions before they were 8 years old. As it was, they were rather well scarred up by the time they were 12.
 \vs p062 5:7 Very early they learned to engage in verbal communication; by the age of 10 they had worked out an improved sign and word language of almost 50 ideas and had greatly improved and expanded the crude communicative technique of their ancestors. But try as hard as they might, they were able to teach only a few of their new signs and symbols to their parents.
 \vs p062 5:8 When about 9 years of age, they journeyed off down the river one bright day and held a momentous conference. Every celestial intelligence stationed on Urantia, including myself, was present as an observer of the transactions of this noontide tryst. On this eventful day they arrived at an understanding to live with and for each other, and this was the first of a series of such agreements which finally culminated in the decision to flee from their inferior animal associates and to journey northward, little knowing that they were thus to found the human race.
 \vs p062 5:9 While we were all greatly concerned with what these two little savages were planning, we were powerless to control the working of their minds; we did not --- could not --- arbitrarily influence their decisions. But within the permissible limits of planetary function, we, the Life Carriers, together with our associates, all conspired to lead the human twins northward and far from their hairy and partially tree\hyp{}dwelling people. And so, by reason of their own intelligent choice, the twins did \bibemph{migrate,} and because of our supervision they migrated \bibemph{northward} to a secluded region where they escaped the possibility of biologic degradation through admixture with their inferior relatives of the Primates tribes.
