Fixed a couple of typos

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -4272,7 +4272,7 @@
 \qstart{At rematerialization of Adam and Eve, who regained consciousness first?}
 {Adam}{0}
 {Eve}{0}
-{both simultaneously}{0}
+{both simultaneously}{1}
 \qstop
 
 \qstart{What was the height of Adam and Eve?}
@@ -4292,7 +4292,7 @@
 {no government worthy of a name}{1}
 \qstop
 
-\qstart{How many children did Adam \&\ Eve bear on this planet in total, aside from Cano and Sansa?}
+\qstart{How many children did Adam \&\ Eve bear on this planet in total, aside from Cain and Sansa?}
 {42}{0}
 {64}{0}
 {105}{1}
