Remove superfluous note.

--- a/tex/p078.tex
+++ b/tex/p078.tex
@@ -19,7 +19,7 @@
 \usection{2.\bibnobreakspace The Adamites in the Second Garden}
 \vs p078 2:1 For thousands of years the sons of Adam laboured along the rivers of Mesopotamia, working out their irrigation and flood\hyp{}control problems to the south, perfecting their defences to the north, and attempting to preserve their traditions of the glory of the first Eden.
 \vs p078 2:2 The heroism displayed in the leadership of the second garden constitutes one of the amazing and inspiring epics of Urantia’s history. These splendid souls never wholly lost sight of the purpose of the Adamic mission, and therefore did they valiantly fight off the influences of the surrounding and inferior tribes while they willingly sent forth their choicest sons and daughters in a steady stream as emissaries to the races of earth. Sometimes this expansion was depleting to the home culture, but always these superior peoples would rehabilitate themselves.
-\vs p078 2:3 The civilization, society, and cultural status of the Adamites were far above the general level of the evolutionary races of Urantia. Only among the old settlements of Van and Amadon and the Adamsonites was there a civilization in any way comparable. But the civilization of the second Eden was an artificial structure --- \bibemph{it had not been evolved} ---  and was therefore doomed to deteriorate until it reached a natural evolutionary level.\fnc{\ldots{}was there a civilization in \bibtextul{anyway} comparable. \bibexpl{The two-word form is the appropriate choice when serving as an adverb only, rather than as an adverbial conjunction, in which case the compound “anyway” is more common. This latter use, roughly synonymous with “at any rate” or “in any case,” is well illustrated by its only occurrence in the papers (at \bibref[148:6.4)]{p0148 6:4} when Job’s friend, Eliphaz, is quoted as saying: “Anyway, man seems predestined to trouble, and perhaps the Lord is only chastising you for your own good.”}}
+\vs p078 2:3 The civilization, society, and cultural status of the Adamites were far above the general level of the evolutionary races of Urantia. Only among the old settlements of Van and Amadon and the Adamsonites was there a civilization in any way comparable. But the civilization of the second Eden was an artificial structure --- \bibemph{it had not been evolved} ---  and was therefore doomed to deteriorate until it reached a natural evolutionary level.
 \vs p078 2:4 Adam left a great intellectual and spiritual culture behind him, but it was not advanced in mechanical appliances since every civilization is limited by available natural resources, inherent genius, and sufficient leisure to ensure inventive fruition. The civilization of the violet race was predicated on the presence of Adam and on the traditions of the first Eden. After Adam’s death and as these traditions grew dim through the passing millenniums, the cultural level of the Adamites steadily deteriorated until it reached a state of reciprocal balance with the status of the surrounding peoples and the naturally evolving cultural capacities of the violet race.
 \vs p078 2:5 But the Adamites were a real nation around 19,000\,B.C., numbering 4,500,000, and already they had poured forth millions of their progeny into the surrounding peoples.
 \usection{3.\bibnobreakspace Early Expansions of the Adamites}
