Remove superfluous note.

--- a/tex/p077.tex
+++ b/tex/p077.tex
@@ -71,7 +71,7 @@
 \vs p077 7:3 Both groups of rebel midwayers are now held in custody awaiting the final adjudication of the affairs of the system rebellion. But they did many strange things on earth prior to the inauguration of the present planetary dispensation.
 \vs p077 7:4 These disloyal midwayers were able to reveal themselves to mortal eyes under certain circumstances, and especially was this true of the associates of Beelzebub, the leader of the apostate secondary midwayers. But these unique creatures must not be confused with certain of the rebel cherubim and seraphim who also were on earth up to the time of Christ’s death and resurrection. Some of the older writers designated these rebellious midway creatures as evil spirits and demons, and the apostate seraphim as evil angels.
 \vs p077 7:5 On no world can evil spirits possess any mortal mind subsequent to the life of a Paradise bestowal Son. But before the days of Christ Michael on Urantia --- before the universal coming of the Thought Adjusters and the pouring out of the Master’s spirit upon all flesh --- these rebel midwayers were actually able to influence the minds of certain inferior mortals and somewhat to control their actions. This was accomplished in much the same way as the loyal midway creatures function when they serve as efficient contact guardians of the human minds of the Urantia reserve corps of destiny at those times when the Adjuster is, in effect, detached from the personality during a season of contact with superhuman intelligences.
-\vs p077 7:6 It is no mere figure of speech when the record states: “And they brought to Him all sorts of sick people, those who were possessed by devils and those who were lunatics.” Jesus knew and recognized the difference between insanity and demoniacal possession, although these states were greatly confused in the minds of those who lived in his day and generation.\fnc{And they brought to Him all sorts of sick \bibtextul{peoples}\ldots{} \bibexpl{Neither ‘people’ nor ‘peoples’ appear here in the original Greek of this Matthew passage; a more common rendering being “And they brought to him all the sick\ldots{}” However, if one form or another of ‘people’ is to be used to place the Matthew passage in this context, ‘peoples,’ which indicates not multiple individuals but multiple large groups of people --- whether tribal, national, or other, does not fit the grammar of the sentence and is clearly not intended here. A mistaken additional keystroke would account for the problem; ‘peoples’ should be changed to ‘people.’}}
+\vs p077 7:6 It is no mere figure of speech when the record states: “And they brought to Him all sorts of sick people, those who were possessed by devils and those who were lunatics.” Jesus knew and recognized the difference between insanity and demoniacal possession, although these states were greatly confused in the minds of those who lived in his day and generation.
 \vs p077 7:7 Even prior to Pentecost no rebel spirit could dominate a normal human mind, and since that day even the weak minds of inferior mortals are free from such possibilities. The supposed casting out of devils since the arrival of the Spirit of Truth has been a matter of confounding a belief in demoniacal possession with hysteria, insanity, and feeble\hyp{}mindedness. But just because Michael’s bestowal has forever liberated all human minds on Urantia from the possibility of demoniacal possession, do not imagine that such was not a reality in former ages.
 \vs p077 7:8 The entire group of rebel midwayers is at present held prisoner by order of the Most Highs of Edentia. No more do they roam this world on mischief bent. Regardless of the presence of the Thought Adjusters, the pouring out of the Spirit of Truth upon all flesh forever made it impossible for disloyal spirits of any sort or description ever again to invade even the most feeble of human minds. Since the day of Pentecost there never again can be such a thing as demoniacal possession.
 \usection{8.\bibnobreakspace The United Midwayers}
