Add an illustration

--- a/tex/p079.tex
+++ b/tex/p079.tex
@@ -32,7 +32,7 @@
 \usection{4.\bibnobreakspace The Aryan Invasion of India}
 \vs p079 4:1 The second Andite penetration of India was the Aryan invasion during a period of almost 500 years in the middle of the third millennium before Christ. This migration marked the terminal exodus of the Andites from their homelands in Turkestan.
 \vs p079 4:2 The early Aryan centres were scattered over the northern half of India, notably in the north\hyp{}west. These invaders never completed the conquest of the country and subsequently met their undoing in this neglect since their lesser numbers made them vulnerable to absorption by the Dravidians of the south, who subsequently overran the entire peninsula except the Himalayan provinces.
-\vs p079 4:3 The Aryans made very little racial impression on India except in the northern provinces. In the Deccan their influence was cultural and religious more than racial. The greater persistence of the so\hyp{}called Aryan blood in northern India is not only due to their presence in these regions in greater numbers but also because they were reinforced by later conquerors, traders, and missionaries. Right on down to the first century before Christ there was a continuous infiltration of Aryan blood into the Punjab, the last influx being attendant upon the campaigns of the Hellenistic peoples.
+\vs p079 4:3 The Aryans made very little racial impression on India except in the northern provinces. In the Deccan their influence was cultural and religious more than racial. The greater persistence of the so\hyp{}called Aryan blood in northern India is not only due to their presence in these regions in greater numbers but also because they were reinforced by later conquerors, traders, and missionaries. Right on down to the first century before Christ there was a continuous infiltration of Aryan blood into the Punjab, the last influx being attendant upon the campaigns of the Hellenistic peoples.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=0.6\columnwidth]{images/MenandrosCoin.jpg}\caption{Menander I Soter (165/155--130 BCE), conqueror of the Punjab, carved out a Greek kingdom in the Punjab and ruled the Punjab until his death in 130 BC.}\end{figure}}
 \vs p079 4:4 On the Gangetic plain Aryan and Dravidian eventually mingled to produce a high culture, and this centre was later reinforced by contributions from the north\hyp{}east, coming from China.
 \vs p079 4:5 In India many types of social organizations flourished from time to time, from the semidemocratic systems of the Aryans to despotic and monarchial forms of government. But the most characteristic feature of society was the persistence of the great social castes that were instituted by the Aryans in an effort to perpetuate racial identity. This elaborate caste system has been preserved on down to the present time.
 \vs p079 4:6 Of the four great castes, all but the first were established in the futile effort to prevent racial amalgamation of the Aryan conquerors with their inferior subjects. But the premier caste, the teacher\hyp{}priests, stems from the Sethites; the Brahmans of the XX century after Christ are the lineal cultural descendants of the priests of the second garden, albeit their teachings differ greatly from those of their illustrious predecessors.
