--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -1083,10 +1083,12 @@
 %\newfontfamily\greekfont[Mapping=tex-text]{Minion Pro}
 \newfontfamily\hebrewfont[Mapping=tex-text,Script=Hebrew]{Ezra SIL}
 \newfontfamily\armfont[Mapping=tex-text,Script=Armenian]{ArTarumianGrqiBardzr_U}
+\newfontfamily\chinesefont[Mapping=tex-text]{Code2000}
 \newcommand{\textheb}[1]{{\hebrewfont#1}}
 \newcommand{\textarm}[1]{{\armfont#1}}
 %\newcommand{\textgreek}[1]{{\greekfont#1}}
 \newcommand{\textgreek}[1]{#1}
+\newcommand{\textchinese}[1]{{\chinesefont#1}}
 
 \def\ackn{Acknowledgement}
 \def\continuedtxt{(continued)}
