--- a/tex/p079.tex
+++ b/tex/p079.tex
@@ -2,7 +2,7 @@
 \author{Archangel}
 \vs p079 0:1 Asia is the homeland of the human race. It was on a southern peninsula of this continent that Andon and Fonta were born; in the highlands of what is now Afghanistan, their descendant Badonan founded a primitive centre of culture that persisted for over 500,000 years. Here at this eastern focus of the human race the Sangik peoples differentiated from the Andonic stock, and Asia was their first home, their first hunting ground, their first battlefield. South\hyp{}western Asia witnessed the successive civilizations of Dalamatians, Nodites, Adamites, and Andites, and from these regions the potentials of modern civilization spread to the world.
 \usection{1.\bibnobreakspace The Andites of Turkestan}
-\vs p079 1:1 For over 25,000 years, on down to nearly 2000\,B.C., the heart of Eurasia was predominantly, though diminishingly, Andite. In the lowlands of Turkestan the Andites made the westward turning around the inland lakes into Europe, while from the highlands of this region they infiltrated eastward. Eastern Turkestan (Sinkiang) and, to a lesser extent, Tibet were the ancient gateways through which these peoples of Mesopotamia penetrated the mountains to the northern lands of the yellow men. The Andite infiltration of India proceeded from the Turkestan highlands into the Punjab and from the Iranian grazing lands through Baluchistan. These earlier migrations were in no sense conquests; they were, rather, the continual drifting of the Andite tribes into western India and China.
+\vs p079 1:1 For over 25,000 years, on down to nearly 2000\,B.C., the heart of Eurasia was predominantly, though diminishingly, Andite. In the lowlands of Turkestan the Andites made the westward turning around the inland lakes into Europe, while from the highlands of this region they infiltrated eastward. Eastern Turkestan (Sinkiang)\fnst{\textbf{Eastern Turkestan (Sinkiang)}, This is usually spelled as Xinjiang (Chinese \textchinese{新疆}). The older English works refer to it as ``Chinese Turkestan''. The name ``East Turkestan'' was created by Russian sinologist Hyacinth to replace the term ``Chinese Turkestan'' in 1829.} and, to a lesser extent, Tibet were the ancient gateways through which these peoples of Mesopotamia penetrated the mountains to the northern lands of the yellow men. The Andite infiltration of India proceeded from the Turkestan highlands into the Punjab and from the Iranian grazing lands through Baluchistan. These earlier migrations were in no sense conquests; they were, rather, the continual drifting of the Andite tribes into western India and China.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=0.4\columnwidth]{images/Hyacinth.jpg}\caption{Nikita Yakovlevich Bichurin (Hyacinth). Portrait by Nikolay Bestuzhev.}\end{figure}}
 \vs p079 1:2 \pc For almost 15,000 years centres of mixed Andite culture persisted in the basin of the Tarim River in Sinkiang and to the south in the highland regions of Tibet, where the Andites and Andonites had extensively mingled. The Tarim valley was the easternmost outpost of the true Andite culture. Here they built their settlements and entered into trade relations with the progressive Chinese to the east and with the Andonites to the north. In those days the Tarim region was a fertile land; the rainfall was plentiful. To the east the Gobi was an open grassland where the herders were gradually turning to agriculture. This civilization perished when the rain winds shifted to the south\hyp{}east, but in its day it rivalled Mesopotamia itself.
 \vs p079 1:3 \pc By 8000\,B.C. the slowly increasing aridity of the highland regions of central Asia began to drive the Andites to the river bottoms and the seashores. This increasing drought not only drove them to the valleys of the Nile, Euphrates, Indus, and Yellow rivers, but it produced a new development in Andite civilization. A new class of men, the traders, began to appear in large numbers.
 \vs p079 1:4 When climatic conditions made hunting unprofitable for the migrating Andites, they did not follow the evolutionary course of the older races by becoming herders. Commerce and urban life made their appearance. From Egypt through Mesopotamia and Turkestan to the rivers of China and India, the more highly civilized tribes began to assemble in cities devoted to manufacture and trade. Adonia became the central Asian commercial metropolis, being located near the present city of Ashkhabad. Commerce in stone, metal, wood, and pottery was accelerated on both land and water.
