--- a/tex/p086.tex
+++ b/tex/p086.tex
@@ -8,7 +8,7 @@
 \vs p086 1:3 This ever\hyp{}present dread of bad luck was paralysing. Why work hard and reap bad luck --- nothing for something --- when one might drift along and encounter good luck --- something for nothing? Unthinking men forget good luck --- take it for granted --- but they painfully remember bad luck.
 \vs p086 1:4 Early man lived in uncertainty and in constant fear of chance --- bad luck. Life was an exciting game of chance; existence was a gamble. It is no wonder that partially civilized people still believe in chance and evince lingering predispositions to gambling. Primitive man alternated between two potent interests: the passion of getting something for nothing and the fear of getting nothing for something. And this gamble of existence was the main interest and the supreme fascination of the early savage mind.
 \vs p086 1:5 The later herders held the same views of chance and luck, while the still later agriculturists were increasingly conscious that crops were immediately influenced by many things over which man had little or no control. The farmer found himself the victim of drought, floods, hail, storms, pests, and plant diseases, as well as heat and cold. And as all of these natural influences affected individual prosperity, they were regarded as good luck or bad luck.
-\vs p086 1:6 This notion of chance and luck strongly pervaded the philosophy of all ancient peoples. Even in recent times in the Wisdom of Solomon it is said: “I returned and saw that the race is not to the swift, nor the battle to the strong, neither bread to the wise, nor riches to men of understanding, nor favour to men of skill; but fate and chance befall them all. For man knows not his fate; as fishes are taken in an evil net, and as birds are caught in a snare, so are the sons of men snared in an evil time when it falls suddenly upon them.”
+\vs p086 1:6 This notion of chance and luck strongly pervaded the philosophy of all ancient peoples. Even in recent times in the Wisdom of Solomon\fnst{\textbf{Wisdom of Solomon}, The quote is \bibemph{not} from the Wisdom of Solomon, but from Ecclesiastes~9:11-12. Note that at \bibref[121:6.3]{p121 6:3} the book Wisdom of Solomon is mentioned and the comment there unambiguously corresponds to the apocryphal book known by that name. Therefore, it cannot be asserted that here the biblical book Ecclesiastes is simply referred to as ``Wisdom of Solomon''. This is simply a mistake on the part of either the human source or the Brilliant Evening Star who sponsored this revelation.} it is said: “I returned and saw that the race is not to the swift, nor the battle to the strong, neither bread to the wise, nor riches to men of understanding, nor favour to men of skill; but fate and chance befall them all. For man knows not his fate; as fishes are taken in an evil net, and as birds are caught in a snare, so are the sons of men snared in an evil time when it falls suddenly upon them.”
 \usection{2.\bibnobreakspace The Personification of Chance}
 \vs p086 2:1 Anxiety was a natural state of the savage mind. When men and women fall victims to excessive anxiety, they are simply reverting to the natural estate of their far\hyp{}distant ancestors; and when anxiety becomes actually painful, it inhibits activity and unfailingly institutes evolutionary changes and biologic adaptations. Pain and suffering are essential to progressive evolution.
 \vs p086 2:2 The struggle for life is so painful that certain backward tribes even yet howl and lament over each new sunrise. Primitive man constantly asked, “Who is tormenting me?” Not finding a material source for his miseries, he settled upon a spirit explanation. And so was religion born of the fear of the mysterious, the awe of the unseen, and the dread of the unknown. Nature fear thus became a factor in the struggle for existence first because of chance and then because of mystery.
